--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.34.0</version>
+            <version>3.45.3.0</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
